methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:2: error: ')' expected but ';' found.
def move(nbPas: Int;versLAvant: Boolean) {if (versLAvant) {while (nbPas!=0) {avance(); nbPas = nbPas - 1}}}
                   ^MethodsArgs:2: error: ';' expected but ')' found.
def move(nbPas: Int;versLAvant: Boolean) {if (versLAvant) {while (nbPas!=0) {avance(); nbPas = nbPas - 1}}}
                                       ^MethodsArgs:3: error: ';' expected but ')' found.
move(5;versLAvant) 
                 ^